# CPPLearn

./: .gitignore  CMakeLists.txt  build.sh  g++build.sh
config/: person.conf
cpp20/module/: CMakeLists.txt  butter.cpp  jams.cpp  main.cpp  spreadables.cpp
docs/: crtp.md  template.md  tmplate_multi_args.md
proto/: pro.proto
src/: call_once.cpp  crtp.cpp  proto_learn.cpp
src/condition/: condition.cpp
src/effective-cpp/: item02_auto_type_deduction.cpp  item03_decltype_type_deduction.cpp  item04_learn_view_deduction_types.cpp  template_type_deduction.cpp
src/log-marco/: a.cpp  b.cpp  log.hpp  main.cpp
src/socket/: receiver.cpp  sender.cpp
src/socket_multi/: reciever.cpp  sender.cpp
